add some basic features such as Hyperlinks into index.html file and create job.html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            My first webpage test
-        </title>
-    </head>
-    <body>
-        <p> Wechat : Lza20020301 </p>
-    </body>
+  <head>
+    <title>My first webpage test</title>
+    <style>
+      img {
+        width: 650px;
+        border-radius: 50px;
+        float: right;
+        margin-right: 100px;
+      }
+      p.Name {
+        font-weight: bold;
+      }
+      em {
+        color: green;
+        font-style: italic;
+      }
+      p,
+      a {
+        margin-left: 100px;
+      }
+      h1 {
+        margin-top: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <img
+      src="images/Screen Shot 2021-09-26 at 12.52.52 AM copy.png"
+      alt="autumn schedule"
+    />
+    <h1>This is a page of self-introduction</h1>
+    <a href="#Info">Basic Information</a>
+    <a href="#courses">Courses I'm taking</a>
+    <h2 id="Info">Basic Information</h2>
+    <p class="Name">Name : Aureliano Liu</p>
+    <p>Wechat : Lza20020301</p>
+    <p>Student ID : 1960653 <em>I will graduate in 2022! </em></p>
+    <p>
+      Majors : ACMS <em>Engineering and Physical Science</em> + Applied Physics
+      with Honor
+    </p>
+    <p>Email : zliu8@uw.edu</p>
+    <a href="mailto:zliu8@uw.edu" target="_blank">Email me</a>
+    <p>Job role : Software Development Engineer @HUAWEI</p>
+    <a href="job.html" target="_blank">click here for more info about my job</a>
+    <h2 id="Courses">Courses I'm taking :</h2>
+    <p>1. Amath 401 Vector Calculus and Complex Variable</p>
+    <p>2. Physics 231 Introductory Experimental Physics</p>
+    <p>3. Physics 434 Computational Data Analysis</p>
+    <p>4. Physics 225 Introduction to Quantum Mechanics</p>
+    <p>5. CSE 374 Intermediate Programming Tools</p>
+    <a href="images/Screen Shot 2021-09-26 at 12.52.52 AM copy.png" download>
+      click here to download my schedule</a
+    >
+  </body>
 </html>
