--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       }
       h1 {
         margin-top: 30px;
+        margin-left: 10px;
+      }
+      h2 {
+        margin-left: 10px;
       }
     </style>
   </head>
